# SiHuiFuRan-Agent

./: .env.example  README.md  pyproject.toml  项目篇规划.md
.codegraph/: daemon.pid
Demo/Demo01-ReflectionAndReAct/: image-main.py  main.py  pyproject.toml
Demo/Demo02-Plan-and-Execute/: 01_structuredtool_minimal.py  02_llm_call_tool.py  __init__.py  __main__.py  dependencies_guide.md  pyproject.toml  yield.py  学习笔记_StructuredTool_20260629_1605.md
Demo/Demo02-Plan-and-Execute/agents/: __init__.py  code_agent.py
Demo/Demo02-Plan-and-Execute/core/: checkpoint.py
Demo/Demo02-pass/: main.py  pyproject.toml
MokioAgent/: .gitignore  README.md  evolution.excalidraw  pyproject.toml  学习笔记_20260629_1530.md  项目篇规划.md
MokioAgent/.codegraph/: daemon.pid
MokioAgent/docs/: reading-guide.md  workspace-lifecycle.md
MokioAgent/src/mokioclaw/agents/: code_agent.py
MokioAgent/src/mokioclaw/cli/: app.py  event_summary.py  formatter.py
MokioAgent/tests/: test_formatter.py  test_runtime.py  test_session.py  test_tools.py  test_tui.py
docs/: workspace-lifecycle.md
src/mokioclaw/agents/: code_agent.py  search_agent.py
src/mokioclaw/cli/: app.py  event_summary.py  formatter.py
src/mokioclaw/core/: agent.py  checkpoint.py  state.py  trace.py
src/mokioclaw/graph/: nodes.py  state.py  workflow.py
src/mokioclaw/prompts/: stage3.py
src/mokioclaw/tools/: __init__.py  bash_tool.py  registry.py  todo_tool.py
tests/: test_checkpoint.py  test_cli_smoke.py  test_formatter.py  test_graph.py  test_runtime.py  test_tools.py  test_trace.py  test_tui.py
(+24 files in other folders)
