[project]
name = "mokioclaw"
version = "0.1.0"
description = "A teaching-first mini CodeAgent built from ToolCall to Claw."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.24",
    "textual>=8.2.4",
    "typer>=0.16.0",
]

[project.scripts]
mokioclaw = "mokioclaw.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = "-p no:launch_testing -p no:launch_ros"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
